src/test/ui/ffi_returns_twice.stderr
error[E0724]: `#[ffi_returns_twice]` may only be used on foreign functions
  --> $DIR/ffi_returns_twice.rs:4:1
   |
LL | #[ffi_returns_twice]
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

